improved navigation, added privacy policy page

--- a/authorization_code/public/styles.css
+++ b/authorization_code/public/styles.css
@@ -116,6 +116,11 @@ padding-top: 100px;
   } */
 
 
+  #navBarWordCloudify {
+    color: black;
+    text-decoration: none !important;
+  }
+
 
 
   @font-face {
