testing heroku to see why some content doesn't load

--- a/authorization_code/public/styles.css
+++ b/authorization_code/public/styles.css
@@ -121,6 +121,11 @@ padding-top: 100px;
     text-decoration: none !important;
   }
 
+  #testingHeroku {
+    text-align: center;
+    padding-top: 100px;
+  }
+
 
 
   @font-face {
