--- a/authorization_code/public/styles.css
+++ b/authorization_code/public/styles.css
@@ -275,6 +275,10 @@ padding-top: 100px;
     display: none;
   }
 
+  #download {
+    float: left;
+  }
+
 }
 
 @media screen and (max-width: 530px) {
@@ -413,7 +417,19 @@ padding-top: 100px;
     padding-top: 0px;
     text-align: left;
   }
-  
-  
 
+}
+
+@media screen and (max-width: 345px) {
+  #navBarWordCloudify {
+    font-size: 24px;
+  }
+
+  .timeBtn {
+    font-size: 15px;
+  }
+
+  .themeBtn {
+    font-size: 15px;
+  }
 }
