can now choose custom colors for word cloud

--- a/authorization_code/public/styles.css
+++ b/authorization_code/public/styles.css
@@ -389,3 +389,21 @@
   }
 
 }
+
+p,
+label {
+  font:
+    1rem 'Fira Sans',
+    sans-serif;
+}
+
+input {
+  margin: 0.4rem;
+}
+
+#custom-colors {
+  max-height: 70px;
+  min-height: 50px;
+  padding-left: 0px;
+  padding-top: 0px;
+}
